Refactored the recursion a bit so that the top level of the document is built correctly.  You can now generate objects or arrays at the top level.

--- a/src/main/resources/config2.json
+++ b/src/main/resources/config2.json
@@ -6,10 +6,15 @@
     "what": {
         "name":alpha(10),
         "id": uuid(),
-        "details": [{
+        "details": [
+            repeat(3),
+            {
             "start": timestamp("2015/03/01"),
             "stop" : timestamp("2015/03/02"),
-            "speed": double(50.0, 100.0)
+            "speed": double(50.0, 100.0),
+            "pos-neg-int": integer(-10, 0),
+            "pos-neg-long": long(-10, 0),
+            "pos-neg-double": double(-10, 0)
         }]
     },
     "where": {
