--- a/src/main/resources/config3.json
+++ b/src/main/resources/config3.json
@@ -1,12 +1,12 @@
 [
-    repeat(),
+    "repeat()",
     {
         "details": [
-            repeat(3),
+            "repeat(3)",
             {
-                "start": timestamp("2015/03/01"),
-                "stop" : timestamp("2015/03/02"),
-                "speed": double(50.0, 100.0)
+                "start": "timestamp(\"2015/03/01\")",
+                "stop" : "timestamp(\"2015/03/02\")",
+                "speed": "double(50.0, 100.0)"
             }
         ]
     
