You can now reference other properties that have already been generated using "this.propName".  This even works inside of functions like date(this.someOtherDate)

--- a/src/main/resources/config4.json
+++ b/src/main/resources/config4.json
@@ -5,5 +5,17 @@
     "objects": ["Building 1"],
     "location": "45.5,44.3",
     "message": "Entered Building 1",
-    "null-test": null
+    "null-test": null,
+    "same-as-system": "this.system",
+    "nest": {
+        "nest-1": "alpha(2)",
+        "sub-nest": {
+            "sub-nest1": "integer(334, 4433)"
+        }
+    },
+    "nest-ref": "this.nest.nest-1",
+    "sub-nest-ref": "this.nest.sub-nest.sub-nest1",
+    "func-ref": "random(this.action,this.system)",
+    "date": "date('2015/04/01')",
+    "newer-date": "date(this.date)"
 }
