--- a/src/main/resources/defaultSimConfig.json
+++ b/src/main/resources/defaultSimConfig.json
@@ -1,5 +1,5 @@
 {
-    "workflowList": [{
+    "workflows": [{
             "workflowName": "test",
             "workflowFilename": "normalUser1Workflow.json"
         }],
