Officially changed the name to json-data-generator Fixed the examples up a bit Added how to run the application to the README

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.acesinc.data</groupId>
-    <artifactId>json-generator</artifactId>
+    <artifactId>json-data-generator</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0</version>
     <properties>
