Added the ability to reference other properties at the current scope level using "cur." Fixed a few of the date types that i missed when I added back in the quotes.

--- a/src/main/resources/config4.json
+++ b/src/main/resources/config4.json
@@ -11,7 +11,8 @@
         "nest-1": "alpha(2)",
         "sub-nest": {
             "sub-nest1": "integer(334, 4433)"
-        }
+        },
+        "cur-copy": "cur.nest-1"
     },
     "nest-ref": "this.nest.nest-1",
     "sub-nest-ref": "this.nest.sub-nest.sub-nest1",
@@ -20,5 +21,9 @@
     "newer-date": "date(this.date)",
     "min": 100,
     "max": 200,
-    "between-min-max": "integer(this.min, this.max)"
+    "between-min-max": "integer(this.min, this.max)",
+    "array" : [{
+            "start": "now('-5_d')",
+            "end": "date(cur.start)"
+    }]
 }
