Fixed #2 which was causing dates to be generated outside of the max date range.  Also added the ability to specify the max date to be a time offset.

--- a/src/main/resources/config3.json
+++ b/src/main/resources/config3.json
@@ -4,8 +4,8 @@
         "details": [
             "repeat(3)",
             {
-                "start": "timestamp(\"2015/03/01\")",
-                "stop" : "timestamp(\"2015/03/02\")",
+                "start": "timestamp(\"2015/03/01T00:00:00\")",
+                "stop" : "timestamp(\"2015/03/02T00:00:00\")",
                 "speed": "double(50.0, 100.0)"
             }
         ]
