--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <groupId>com.metamx</groupId>
             <artifactId>tranquility_2.10</artifactId>
             <version>0.4.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hyperic</groupId>
+                    <artifactId>sigar</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
