--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <groupId>net.acesinc.data</groupId>
     <artifactId>json-data-generator</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     
     <scm>
         <connection>scm:git:git://github.com/acesinc/json-data-generator.git</connection>
         <developerConnection>scm:git:git@github.com:acesinc/json-data-generator.git</developerConnection>
         <url>https://github.com/acesinc/json-data-generator</url>
-        <tag>HEAD</tag>
+        <tag>json-data-generator-1.2.1</tag>
     </scm>
   
     <licenses>
