--- a/src/main/resources/defaultSimConfig.json
+++ b/src/main/resources/defaultSimConfig.json
@@ -1,13 +1,16 @@
 {
     "workflows": [{
             "workflowName": "test",
-            "workflowFilename": "normalUser1Workflow.json"
-        }],
+            "workflowFilename": "normalUser1Workflow.json",
+            "instances" : 1
+        }
+   ],
     "producers": [{
-            "type": "kafka",
-            "broker.server": "192.168.59.103",
-            "broker.port": 9092,
+            "type": "nats",
+            "broker.server": "127.0.0.1",
+            "broker.port": 4222,
             "topic": "logevent",
+            "flatten": false,
             "sync": false
     },{
         "type":"logger"
