--- a/src/main/resources/defaultSimConfig.json
+++ b/src/main/resources/defaultSimConfig.json
@@ -9,7 +9,7 @@
             "type": "nats",
             "broker.server": "127.0.0.1",
             "broker.port": 4222,
-            "topic": "logevent",
+            "topic": "vehicle",
             "flatten": false,
             "sync": false
     },{
