--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
 			<artifactId>iot-device-client</artifactId>
 			<version>1.3.30</version>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.pulsar</groupId>
+            <artifactId>pulsar-client</artifactId>
+            <version>1.22.0-incubating</version>
+		</dependency>
     </dependencies>
     <repositories>
         <!-- These are set in the settings.xml to our nexus repo -->
