--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,19 @@
 			<artifactId>iot-device-client</artifactId>
 			<version>1.3.30</version>
 		</dependency>
+
+        <!-- AWS -->
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.221</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.7</version>
+        </dependency>
     </dependencies>
     <repositories>
         <!-- These are set in the settings.xml to our nexus repo -->
