--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,16 @@
 			<artifactId>iot-device-client</artifactId>
 			<version>1.3.30</version>
 		</dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.15</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.mifmif</groupId>
+            <artifactId>generex</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     <!-- AWS -->
 
         <dependency>
