--- a/src/main/resources/config1.json
+++ b/src/main/resources/config1.json
@@ -9,16 +9,7 @@
         "random-types": "random('string', 10.554, true, false)",
         "alpha": "alpha(5)",
         "alphaNumeric": "alphaNumeric(10)",
-        "uuid": "uuid()",
-        "faker": "faker(address.city_prefix)"
-    },
-    "regex": {
-        "emailId": "regex(test_ios\\d{3}\\@gmail\\.com)",
-        "ip": "regex(172\\.1\\.55\\.([1-9]|[1-9][0-9]|1([0-9][0-9])|2([0-4][0-9]|5[0-5])))",
-        "url": "regex(https:\\/\\/avatars2\\.githubusercontent\\.com\\/u\\/[0-9]{8}\\?s\\=460\\&v\\=4)",
-        "id": "regex([A-Za-z0-9]{32})",
-        "dateUTC": "regex(2018-05-(0[1-9]|[1-2]\\d|3[0-1])T([0-1]\\d|2[0-3]):[0-5]\\d:[0-5]\\dZ)",
-        "int": "regex(\\d{3})"
+        "uuid": "uuid()"
     },
     "primatives": {
         "active": "boolean()",
