--- a/pom.xml
+++ b/pom.xml
@@ -129,27 +129,33 @@
             <version>1.0.2</version>
         </dependency>
         <dependency>
-			<groupId>com.microsoft.azure.sdk.iot</groupId>
-			<artifactId>iot-device-client</artifactId>
-			<version>1.3.30</version>
-		</dependency>
-    <!-- AWS -->
+            <groupId>com.microsoft.azure.sdk.iot</groupId>
+            <artifactId>iot-device-client</artifactId>
+            <version>1.3.30</version>
+        </dependency>
+        
+        <!-- AWS -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-kinesis</artifactId>
+            <version>1.11.447</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sts</artifactId>
+            <version>1.11.447</version>
+        </dependency>
 
         <dependency>
-          <groupId>com.amazonaws</groupId>
-          <artifactId>aws-java-sdk</artifactId>
-          <version>1.11.221</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>[2.8.11.1,)</version>
         </dependency>
         <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-          <version>2.6.7</version>
-        </dependency>
-		<dependency>
             <groupId>org.apache.pulsar</groupId>
             <artifactId>pulsar-client</artifactId>
             <version>1.22.0-incubating</version>
-		</dependency>
+        </dependency>
     </dependencies>
     <repositories>
         <!-- These are set in the settings.xml to our nexus repo -->
