--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>[2.8.11.1,)</version>
+            <version>2.9.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.pulsar</groupId>
